--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 name: Schmiede - Playground of Ideas
 markdown: redcarpet
 pygments: true
-bas_url:
-base_url: http://philippwassibauer.github.io/schmiede_web
+base_url:
+bas_url: http://philippwassibauer.github.io/schmiede_web
