--- a/_data/testimonials.yml
+++ b/_data/testimonials.yml
@@ -2,7 +2,7 @@
   testimonial: In the essence Schmiede is a creative exchange. It’s really about doing things.
   twitter: eric
   title: CTO SoundCloud
-  image: edial.jpg
+  image: eric_wahlforss.jpg
   size: 6
 
 - name: Edial Dekker
@@ -15,7 +15,7 @@
 - name: Mark Coniglio
   testimonial: I was impressed by the intensity of the Schmiede participants as I watched them work on their projects. Clearly this was a very serious and committed group of artists. But, the most impressive thing about Schmiede was the atmosphere of sharing, generosity, creativity and craftsmanship that surrounded me.
   title: Troika Ranch, Isadora (software)
-  image: edial.jpg
+  image: mark_coniglio.jpg
   size: 12
 
 
